# hf-playground

./: .gitignore  LICENSE.md  Makefile  README.md  pyproject.toml  requirements.txt
docs/: APIs.md  Models.md  Tools.md
nb/: NER_with_HF_DistilBERT.ipynb  NER_with_spaCy.ipynb  Sentiment_Analysis.ipynb  hello.ipynb
src/hfplayground/: main.py
