[tool.poetry]
name = "hf-playground"
version = "0.1.0"
description = ""
authors = ["William Howell <wlm.howell@gmail.com>"]
readme = "README.md"
license = "LICENSE.md"
packages = [{include = "hfplayground", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.3"
pendulum = "^2.1.2"
numpy = "^1.25.2"
termcolor = "^2.3.0"
spacy = "^3.6.1"
toolz = "^0.12.0"
requests = "^2.31.0"
transformers = "^4.33.1"
torch = "^2.0.1"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
create = true
in-project = true
prefer-active-python = true # 2023-08-25 EXPERIMENTAL
